tests/ui/type/type-ascription-precedence.stderr
error: expected one of `!`, `.`, `::`, `;`, `?`, `{`, `}`, or an operator, found `:`
  --> $DIR/type-ascription-precedence.rs:25:7
   |
LL |     &S: &S;
   |       ^ expected one of 8 possible tokens

error: expected identifier, found `:`
  --> $DIR/type-ascription-precedence.rs:31:8
   |
LL |     *(S: Z);
   |        ^ expected identifier

error: expected identifier, found `:`
  --> $DIR/type-ascription-precedence.rs:35:8
   |
LL |     -(S: Z);
   |        ^ expected identifier

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `:`
  --> $DIR/type-ascription-precedence.rs:39:12
   |
LL |     (S + Z): Z;
   |            ^ expected one of `.`, `;`, `?`, `}`, or an operator

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `:`
  --> $DIR/type-ascription-precedence.rs:43:12
   |
LL |     (S * Z): Z;
   |            ^ expected one of `.`, `;`, `?`, `}`, or an operator

error: expected identifier, found `:`
  --> $DIR/type-ascription-precedence.rs:47:11
   |
LL |     S .. S: S;
   |           ^ expected identifier

error: expected one of `.`, `;`, `?`, `}`, or an operator, found `:`
  --> $DIR/type-ascription-precedence.rs:51:13
   |
LL |     (S .. S): S;
   |             ^ expected one of `.`, `;`, `?`, `}`, or an operator

error: aborting due to 7 previous errors

